cleaned up code to adress the warnings backtracking still not working